# ai-commit-gen

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: prompt.md
