[package]
name = "ai-commit-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102" }
askama = "0.15.6"
clap = { version = "4.6.1", features = ["derive", "env"] }
rig-core = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
